# test-case-generator

./: .dockerignore  .env.example  .gitignore  CI_FAILURES.md  MERGE_PREP.md  MERGE_SUMMARY.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/: __init__.py  health.py  jobs.py  webhooks.py
backend/src/core/: cache.py  config.py  embeddings.py  exceptions.py  github_client.py  llm_client.py  logging.py  vector_db.py
backend/src/models/: README.md  __init__.py  processing_job.py  test_case_document.py  webhook_event.py
backend/src/services/: README.md  __init__.py  ai_prompt_template.py  ai_service.py  github_service.py  webhook_service.py
backend/tests/contract/: test_github_api.py
backend/tests/integration/: test_end_to_end.py
backend/tests/unit/models/: test_processing_job.py  test_test_case_document.py  test_webhook_event.py
backend/tests/unit/services/: test_ai_service.py  test_github_service.py  test_webhook_service.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_STANDARDS.md  QUICKSTART_GUIDE.md  TEST_CASES.md  TROUBLESHOOTING.md  langgraph-implementation.md  uv-setup.md
frontend/: .eslintrc.json  index.html  package.json
frontend/src/: App.tsx
specs/001-ai-test-generation/: ai-prompt-template.md  data-model.md  dependencies.md  error-catalog.md  gap-closure-report.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-case-template.md
src/analyzer/: README.md
src/generator/: README.md
src/models/: README.md
src/parser/: README.md
test-cases/: issue-11.md  issue-13.md  issue-16.md
(+4 files in other folders)
